# pansou-rust

./: .gitignore  Cargo.toml  README.md  config.yaml
.claude/: settings.local.json
.github/workflows/: release.yml
doc/插件/: sosoyunpan-com.md
docs/: seo-optimization-plan.md
docs/superpowers/plans/: 2026-05-12-seo-optimization-plan.md
docs/superpowers/specs/: 2026-05-12-seo-optimization-design.md
docs/插件/: panshushu-com.md
python-service/: analyze_metrics.py  metric_config.json  save_pan_links.py
skills/panpanxia-search/: SKILL.md
skills/pansou-search/: SKILL.md
src/: assets.rs  auth.rs  config.rs  constants.rs  handlers.rs  main.rs  model.rs  resource_cache.rs  seo.rs  templates.rs
src/handlers/: api.rs  mod.rs  pages.rs  seo.rs
src/plugin/: alupan.rs  jikepan.rs  mod.rs  pan666.rs  panshushu.rs  sosoyunpan.rs  yunsou.rs
src/post_search/: mod.rs  python_sink.rs
src/service/: check.rs  mod.rs  search.rs
static/: index.html  login.html
static/css/: style.css
static/js/: app.js
templates/: 404.html  base.html  resource.html  search.html
