[package]
name = "pansou-rust"
version = "1.0.7"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
rust-embed = "8"
mime_guess = "2"

chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
scraper = "0.23"
regex = "1"
url = "2"
async-trait = "0.1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
